compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/caseInProperties.fir.kt
// COMPARE_WITH_LIGHT_TREE

<!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val aa<!> = 1<!>
<!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>val Aa<!> = 1<!>
